tests/ui/basic/len_on_int.rs
use metamatch::eval;

// len() on a non-length type
fn main() {
    eval! {
        len(42)
    };
}
